<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/nav_dashboard" />
    </group>

    <group
        android:id="@+id/menu_search"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ezhome_search"
            android:icon="@drawable/ezhome_search"
            android:title="@string/nav_ezhome_search" />
        <item
            android:id="@+id/nav_search_online"
            android:icon="@drawable/web_search"
            android:title="@string/nav_search_online" />
        <item
            android:id="@+id/nav_saved_searches"
            android:icon="@drawable/search_history"
            android:title="@string/nav_saved_searches" />
    </group>

    <group
        android:id="@+id/menu_account"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/account_settings"
            android:title="@string/nav_account_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/log_out"
            android:title="@string/nav_logout" />
    </group>

    <!-- syntax for grouping items with title
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

</menu>