<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Call"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <!--TODO replace with image slider-->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/ps5" />

            <TextView
                android:id="@+id/ezhome_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ezhome_address" />

            <!--<TextView
            android:id="@+id/Apartment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apartment: " />-->

            <!-- TODO add description of what ezPrice actually is -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ezhome_ezprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ezhome_ezprice" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_ezprice_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_ezprice_details" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ezprice_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/ezhome_rent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ezhome_rent" />

                <TextView
                    android:id="@+id/ezhome_thermostat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/ezhome_thermostat" />

                <TextView
                    android:id="@+id/ezhome_cable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ezhome_cable" />

                <TextView
                    android:id="@+id/ezhome_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ezhome_internet" />

                <TextView
                    android:id="@+id/ezhome_gas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/ezhome_gas" />

                <TextView
                    android:id="@+id/ezhome_electricity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/ezhome_electricity" />

            </LinearLayout>

            <TextView
                android:id="@+id/ezhome_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ezhome_area" />

            <TextView
                android:id="@+id/ezhome_bedrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ezhome_bedrooms" />

            <TextView
                android:id="@+id/ezhome_bathrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ezhome_bathrooms" />

            <CheckedTextView
                android:id="@+id/ezhome_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:text="@string/ezhome_parking" />

            <CheckedTextView
                android:id="@+id/ezhome_gym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:text="@string/ezhome_gym" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/sms"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:src="@drawable/call"
        android:text="Call" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:src="@drawable/text"
        android:text="Send Text" />

</RelativeLayout>
